# PySyM

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.trae/rules/: pysym.md
docs/: quantum_module.md
examples/: analysis_demo.py  interactive_demo.py  quantum_examples.py  symmetry_demo.py
src/PySyM/: __init__.py
src/PySyM/abstract_phys/: __init__.py
src/PySyM/abstract_phys/physical_objects/: __init__.py  abstract_physical_objects.py  particles.py  spacetime.py  systems.py
src/PySyM/abstract_phys/representation/: phys_representation.py  selection_rules.py
src/PySyM/abstract_phys/symmetry_environments/: __init__.py  base.py  gauge_groups.py  poincare_group.py
src/PySyM/abstract_phys/symmetry_operations/: analyzer.py  base.py  breaking.py  generators.py  specific_operations.py
src/PySyM/abstract_phys/utils/: __init__.py  clebsch_gordan.py  wigner_Dmatrix.py
src/PySyM/core/: __init__.py
src/PySyM/core/algebraic_structrues/: __init__.py  abstract_algebra.py  algebraic_relations.py  field.py  module.py  ring.py
src/PySyM/core/algebraic_structures/: __init__.py  abstract_algebra.py  module.py  ring.py
src/PySyM/core/group_theory/: __init__.py  abstract_group.py  continuous_groups.py  coset.py  discrete_groups.py  group_factory.py  group_func.py  product_group.py  specific_group.py  (+1 more)
src/PySymmetry/: __init__.py
src/PySymmetry/abstract_phys/: __init__.py
src/PySymmetry/core/: __init__.py
src/PySymmetry/tools/: __init__.py  lie_algebra_symbolic.py  performance.py
src/PySymmetry/visual/: __init__.py  animation.py  density.py  entanglement.py  interactive.py  quantum_ops.py  spectrum.py  states.py  utils.py  wavefunction3d.py
tests/: test_abstract_phys.py  test_algebraic_structures.py  test_analysis.py  test_animation.py  test_clebsch_gordan.py  test_coverage_modules.py  test_density.py  test_explainer.py  test_group_theory.py  test_hamiltonian.py  test_hydrogen_so4.py  test_integration.py  test_interactive.py  test_irreducible.py  test_lie_algebra.py  test_lie_algebra_symbolic.py  test_matrix_decompositions.py  test_matrix_factory.py  test_matrix_operations.py  test_new_group_theory.py  test_performance.py  test_phys_representation.py  test_product_group.py  test_quantum_states.py  test_representation.py  test_selection_rules.py  test_simulator.py  test_solver.py  test_special_matrices.py  test_spherical_harmonics.py  test_transformations.py  test_visual.py  test_visual_interactive.py  test_visual_utils.py  test_wavefunction3d.py  test_wigner_Dmatrix.py
(+118 files in other folders)
