[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symmetry-physics"
version = "0.1.0"
description = "Python库用于描述对称性及其在物理学中的应用"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LDK", email = "bluejam001@163.com"}
]
keywords = ["symmetry", "group theory", "physics", "quantum", "crystallography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [

]

[project.optional-dependencies]
dev = [

]
docs = [

]
visualization = [

]

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=symmetry_physics"

[tool.black]
line-length = 88
target-version = [ "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true