[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySyM"
version = "0.2.0"
description = "Python库用于描述对称性及其在物理学中的应用"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LDK", email = "bluejam001@163.com"}
]
keywords = ["symmetry", "group theory", "physics", "quantum", "crystallography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "spglib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]
symbolic = [
    "sympy>=1.12",
]
docs = [

]
visualization = [

]

[project.urls]
Homepage = "https://github.com/cathylinlin/PySyM"
Documentation = "https://github.com/cathylinlin/PySyM#readme"
Repository = "https://github.com/cathylinlin/PySyM"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = [ "py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true